--- a/download.html
+++ b/download.html
@@ -328,12 +328,12 @@
                 studentName: 'Shanvi Singh',
                 className: '5A',
                 subject: 'Mathematics',
-                marksObtained: 42,
+                marksObtained: 36,
                 totalMarks: 50,
-                percentage: 84,
-                grade: 'A',
-                gradeRemark: 'Excellent',
-                teacherRemark: 'Shanvihas shown excellent understanding of revisional concepts. His problem-solving approach is methodical and accurate. With continued practice, she can achieve even better results in future examinations.',
+                percentage: 72,
+                grade: 'B',
+                gradeRemark: 'Good',
+                teacherRemark: 'Shanvihas shown good understanding of revisional concepts. His problem-solving approach is methodical and accurate. With continued practice, she can achieve even better results in future examinations. But she must put correct values and use more reasonable method to solve the questions',
                 questions: [
                     {
                         question: 'Q1. Solve the quadratic equation: x² - 5x + 6 = 0',
